ENH: add  --auto-servernum to xvfb-run calls to allow multiple simultaneous sessions running

--- a/master.cfg
+++ b/master.cfg
@@ -424,7 +424,7 @@ dipy_bot = GithubBot('nipy', 'dipy',
 # dipy bot for linux machines with optional easy_depends that need an X window
 # for testing
 dipy_bot_nox = GithubBot('nipy', 'dipy',
-    test_cmd = shlex.split('xvfb-run --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
+    test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
     easy_depends = ('nose', 'nibabel')
 )
 nipype_bot = GithubBot('nipy', 'nipype',
@@ -438,7 +438,7 @@ regreg_bot = GithubBot('regreg', 'regreg',
 )
 # pandas bot, primarily for sparc testing
 pandas_bot = GithubBot('pydata', 'pandas',
-    test_cmd = shlex.split('xvfb-run --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe pandas'),
+    test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe pandas'),
     doc_build_cmd = "make doc",
     built_doc_src = "doc/dist",
     easy_depends = ('nose',),
