ENH: specify project (as organization-repo) for GitPoller and ChangeFilter's
with a hope to bring some sanity into buildbot reporting

--- a/master.cfg
+++ b/master.cfg
@@ -150,18 +150,24 @@ class GithubBot(object):
         self.download_dir = download_dir
         self.build_timeout = build_timeout
 
+    @property
+    def project(self):
+        return "%s-%s" % (self.organization, self.repo)
+
     def poller(self, branch="master", interval=300):
         return GitPoller(
             self.git_url,
-            workdir = "%s-%s-%s" % (self.organization, self.repo, branch),
+            project=self.project,
+            workdir = "%s-%s" % (self.project, branch),
             branch=branch,
             pollinterval=interval)
 
     def scheduler(self, buildernames):
         if isinstance(buildernames, basestring):
             buildernames = [buildernames]
-        name = "%s-%s" % (self.organization, self.repo)
-        changefilter = ChangeFilter(repository=self.git_url)
+        name = self.project
+        changefilter = ChangeFilter(repository=self.git_url,
+                                    project=self.project)
         return Scheduler(name=name,
                         change_filter=changefilter,
                         treeStableTimer=None,
