Assigning each builder a category corresponding to the project name.  Could be used to limit some views, e.g. http://nipy.bic.berkeley.edu/tgrid?category=pandas

--- a/master.cfg
+++ b/master.cfg
@@ -979,6 +979,10 @@ c['builders'].append(
       factory=factory_buildout_nibabel('python2.4')))
 """
 
+# Assign all builders categories -- project names, to improve status visualizations
+for b in c['builders']:
+    b.category = b.name.split('-')[0]
+
 ####### STATUS TARGETS
 
 # 'status' is a list of Status Targets. The results of each build will be
