Rename projects to not carry organization name, also added commented out change_hook_dialects for web -- not working yet

--- a/master.cfg
+++ b/master.cfg
@@ -152,7 +152,7 @@ class GithubBot(object):
 
     @property
     def project(self):
-        return "%s-%s" % (self.organization, self.repo)
+        return "%s" % (self.repo,)
 
     def poller(self, branch="master", interval=300):
         return GitPoller(
@@ -1008,7 +1008,9 @@ authz_cfg=authz.Authz(
     stopAllBuilds = False,
     cancelPendingBuild = False,
 )
-c['status'].append(html.WebStatus(http_port=8010, authz=authz_cfg))
+c['status'].append(html.WebStatus(http_port=8010, authz=authz_cfg,
+                                  #change_hook_dialects={ 'base': True, 'github' : True }
+                  ))
 
 ####### PROJECT IDENTITY
 # the 'title' string will appear at the top of this buildbot
