assign more of project names to categories (for ChangeFilters and GitPollers) + revert back to workdir in organization-repo-branch

--- a/master.cfg
+++ b/master.cfg
@@ -158,7 +158,8 @@ class GithubBot(object):
         return GitPoller(
             self.git_url,
             project=self.project,
-            workdir = "%s-%s" % (self.project, branch),
+            category=self.project,
+            workdir = "%s-%s-%s" % (self.organization, self.repo, branch),
             branch=branch,
             pollinterval=interval)
 
@@ -167,7 +168,8 @@ class GithubBot(object):
             buildernames = [buildernames]
         name = self.project
         changefilter = ChangeFilter(repository=self.git_url,
-                                    project=self.project)
+                                    project=self.project,
+                                    category=self.project)
         return Scheduler(name=name,
                         change_filter=changefilter,
                         treeStableTimer=None,
@@ -183,7 +185,9 @@ class GithubBot(object):
         if isinstance(buildernames, basestring):
             buildernames = [buildernames]
         name = "%s-%s-nightly-%s" % (self.organization, self.repo, name_suff)
-        changefilter = ChangeFilter(repository=self.git_url)
+        changefilter = ChangeFilter(repository=self.git_url,
+                                    project=self.project,
+                                    category=self.project)
         return timed.Nightly(name=name,
                 branch="master",
                 builderNames=buildernames,
