NF: adding statsmodels testing on sparcs (for python2 only) and docbuilders for pandas and statsmodels

--- a/master.cfg
+++ b/master.cfg
@@ -455,6 +455,13 @@ pandas_bot = GithubBot('pydata', 'pandas',
     pip_depends = ('apiclient',),
     build_timeout = 3600, # allow for its longer builds/testing especially for sparcs
 )
+# statsmodels bot, primarily for sparc testing
+statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
+    test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe statsmodels'),
+    doc_build_cmd = "make -C docs html",
+    built_doc_src = "docs/build",
+    easy_depends = ('nose',),
+)
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
@@ -469,6 +476,7 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                nipype_bot,
                                                regreg_bot,
                                                pandas_bot,
+                                               statsmodels_bot,
                                               )]
 
 
@@ -551,8 +559,17 @@ c['schedulers'] = [
                         'pandas-py2.x-wheezy-sparc',
                         'pandas-py3.x-wheezy-sparc',
                         ]),
+    statsmodels_bot.scheduler([
+                        'statsmodels-py2.x-sid-sparc',
+                        # not yet
+                        #'statsmodels-py3.x-sid-sparc',
+                        'statsmodels-py2.x-wheezy-sparc',
+                        #'statsmodels-py3.x-wheezy-sparc',
+                        ]),
     nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
+    pandas_bot.nightly_scheduler(['pandas-doc-builder'], 'doc', 2, 20, True),
+    statsmodels_bot.nightly_scheduler(['statsmodels-doc-builder'], 'doc', 3, 20, True),
     # Windows 32 nightly builds
     nipy_bot.nightly_scheduler(['nipy-bdist32-26'], 'exe-26', 2, 10, True),
     nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'exe-27', 2, 20, True),
@@ -801,6 +818,10 @@ c['builders'] += nipy_bot.build_doc_builders(
 )
 c['builders'] += nibabel_bot.build_doc_builders(
     (('nibabel-doc-builder', linux_64_slaves),))
+c['builders'] += pandas_bot.build_doc_builders(
+    (('pandas-doc-builder', sparc_slaves_sid),))
+c['builders'] += statsmodels_bot.build_doc_builders(
+    (('statsmodels-doc-builder', sparc_slaves_sid),))
 # pre-release builders
 c['builders'].append(BuilderConfig(
     name='nipy-release-checks',
@@ -968,6 +989,15 @@ c['builders'] += pandas_bot.build_builders(
     (('pandas-py3.x-sid-sparc', sparc_slaves_sid),
      ('pandas-py3.x-wheezy-sparc', sparc_slaves_wheezy)),
     python='python3')
+# Statsmodels - can be tested only on recent debian releases
+c['builders'] += statsmodels_bot.build_builders(
+    (('statsmodels-py2.x-sid-sparc', sparc_slaves_sid),
+     ('statsmodels-py2.x-wheezy-sparc', sparc_slaves_wheezy)))
+## and python3 builders
+#c['builders'] += statsmodels_bot.build_builders(
+#    (('statsmodels-py3.x-sid-sparc', sparc_slaves_sid),
+#     ('statsmodels-py3.x-wheezy-sparc', sparc_slaves_wheezy)),
+#    python='python3')
 """ Disabling these guys; they haven't worked for a while
 c['builders'].append(
     BuilderConfig(name="buildout-test2.6",
