BF: statsmodels -- adding patsy to pip_depends

--- a/master.cfg
+++ b/master.cfg
@@ -461,6 +461,7 @@ statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
     doc_build_cmd = "make -C docs html",
     built_doc_src = "docs/build",
     easy_depends = ('nose',),
+    pip_depends = ('patsy>=0.1.0',),
 )
 ####### CHANGESOURCES
 
