BF: adding use of build_timeout when building documentation

--- a/master.cfg
+++ b/master.cfg
@@ -342,10 +342,14 @@ class GithubBot(object):
             raise ValueError("Need defined build command and doc source")
         factory, env, workdir, build_workdir = self._code_build_factory()
         # Install into virtualenv
+        kwargs = {}
+        if self.build_timeout:
+            kwargs['timeout'] = self.build_timeout
         factory.addStep(ShellCommand(
             command=['python', 'setup.py', 'install'],
             env=env,
-            workdir=build_workdir))
+            workdir=build_workdir,
+            **kwargs))
         for pkg_spec in self.doc_easy_depends:
             factory.addStep(ShellCommand(command=[
                         'easy_install', pkg_spec], env=env))
