pandas: Adding a sparc builder with python2.6

--- a/master.cfg
+++ b/master.cfg
@@ -561,6 +561,7 @@ c['schedulers'] = [
     pandas_bot.scheduler([
                         'pandas-py2.x-sid-sparc',
                         'pandas-py3.x-sid-sparc',
+                        'pandas-py2.6-wheezy-sparc',
                         'pandas-py2.x-wheezy-sparc',
                         'pandas-py3.x-wheezy-sparc',
                         ]),
@@ -989,6 +990,10 @@ c['builders'] += regreg_bot.build_builders(
 c['builders'] += pandas_bot.build_builders(
     (('pandas-py2.x-sid-sparc', sparc_slaves_sid),
      ('pandas-py2.x-wheezy-sparc', sparc_slaves_wheezy)))
+# test on wheezy for python2.6
+c['builders'] += pandas_bot.build_builders(
+    (('pandas-py2.6-wheezy-sparc', sparc_slaves_wheezy),),
+    python='python2.6')
 # and python3 builders
 c['builders'] += pandas_bot.build_builders(
     (('pandas-py3.x-sid-sparc', sparc_slaves_sid),
