--- a/master.cfg
+++ b/master.cfg
@@ -467,6 +467,13 @@ statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
     easy_depends = ('nose',),
     pip_depends = ('patsy>=0.1.0',),
 )
+# pymvpa bot, primarily for sparc testing
+pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
+    test_cmd = shlex.split('make unittest-nonlabile'),
+    doc_build_cmd = "make htmldoc",
+    built_doc_src = "build/html",
+    easy_depends = ('nose',),
+)
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
@@ -482,7 +489,8 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                regreg_bot,
                                                pandas_bot,
                                                statsmodels_bot,
-                                              )]
+                                               pymvpa_bot,
+                                               )]
 
 
 ####### SCHEDULERS
@@ -572,10 +580,18 @@ c['schedulers'] = [
                         'statsmodels-py2.x-wheezy-sparc',
                         #'statsmodels-py3.x-wheezy-sparc',
                         ]),
+    pymvpa_bot.scheduler([
+                        'pymvpa-py2.x-sid-sparc',
+                        # not yet
+                        #'pymvpa-py3.x-sid-sparc',
+                        'pymvpa-py2.x-wheezy-sparc',
+                        #'pymvpa-py3.x-wheezy-sparc',
+                        ]),
     nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
     pandas_bot.nightly_scheduler(['pandas-doc-builder'], 'doc', 2, 20, True),
     statsmodels_bot.nightly_scheduler(['statsmodels-doc-builder'], 'doc', 3, 20, True),
+    pymvpa_bot.nightly_scheduler(['pymvpa-doc-builder'], 'doc', 4, 20, True),
     # Windows 32 nightly builds
     nipy_bot.nightly_scheduler(['nipy-bdist32-26'], 'exe-26', 2, 10, True),
     nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'exe-27', 2, 20, True),
@@ -828,6 +844,8 @@ c['builders'] += pandas_bot.build_doc_builders(
     (('pandas-doc-builder', sparc_slaves_sid),))
 c['builders'] += statsmodels_bot.build_doc_builders(
     (('statsmodels-doc-builder', sparc_slaves_sid),))
+c['builders'] += pymvpa_bot.build_doc_builders(
+    (('pymvpa-doc-builder', sparc_slaves_sid),))
 # pre-release builders
 c['builders'].append(BuilderConfig(
     name='nipy-release-checks',
@@ -1008,6 +1026,10 @@ c['builders'] += statsmodels_bot.build_builders(
 #    (('statsmodels-py3.x-sid-sparc', sparc_slaves_sid),
 #     ('statsmodels-py3.x-wheezy-sparc', sparc_slaves_wheezy)),
 #    python='python3')
+# PyMVPA
+c['builders'] += pymvpa_bot.build_builders(
+    (('pymvpa-py2.x-sid-sparc', sparc_slaves_sid),
+     ('pymvpa-py2.x-wheezy-sparc', sparc_slaves_wheezy)))
 """ Disabling these guys; they haven't worked for a while
 c['builders'].append(
     BuilderConfig(name="buildout-test2.6",
