pandas: fixed path to build docs

--- a/master.cfg
+++ b/master.cfg
@@ -454,7 +454,7 @@ regreg_bot = GithubBot('regreg', 'regreg',
 pandas_bot = GithubBot('pydata', 'pandas',
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe pandas'),
     doc_build_cmd = "make doc",
-    built_doc_src = "doc/dist",
+    built_doc_src = "doc/build/html",
     easy_depends = ('nose',),
     pip_depends = ('apiclient',),
     build_timeout = 3600, # allow for its longer builds/testing especially for sparcs
