pymvpa -- greed (adding osx and xp buildslaves) + shame (test using nosetests -- they ran not from source dir)

--- a/master.cfg
+++ b/master.cfg
@@ -469,7 +469,7 @@ statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
 )
 # pymvpa bot, primarily for sparc testing
 pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
-    test_cmd = shlex.split('make unittest-nonlabile'),
+    test_cmd = shlex.split('MVPA_TESTS_LABILE=no xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe mvpa2'),
     doc_build_cmd = "make htmldoc",
     built_doc_src = "build/html",
     easy_depends = ('nose',),
@@ -586,6 +586,12 @@ c['schedulers'] = [
                         #'pymvpa-py3.x-sid-sparc',
                         'pymvpa-py2.x-wheezy-sparc',
                         #'pymvpa-py3.x-wheezy-sparc',
+                        'pymvpa-py2.7-osx-10.6',
+                        'pymvpa-py2.7-osx-10.8',
+                        'pymvpa-py2.7-osx-10.4-ppc',
+                        'pymvpa-py2.6-osx-10.5-ppc',
+                        'pymvpa-py2.6-osx-10.5-intel',
+                        'pymvpa-py2.6-xp',
                         ]),
     nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
@@ -1029,7 +1035,14 @@ c['builders'] += statsmodels_bot.build_builders(
 # PyMVPA
 c['builders'] += pymvpa_bot.build_builders(
     (('pymvpa-py2.x-sid-sparc', sparc_slaves_sid),
-     ('pymvpa-py2.x-wheezy-sparc', sparc_slaves_wheezy)))
+     ('pymvpa-py2.x-wheezy-sparc', sparc_slaves_wheezy),
+     ('pymvpa-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('pymvpa-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('pymvpa-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('pymvpa-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('pymvpa-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
+     ('pymvpa-py2.6-xp', xp_32_slaves),
+    ))
 """ Disabling these guys; they haven't worked for a while
 c['builders'].append(
     BuilderConfig(name="buildout-test2.6",
