No xvfb for OSX so just use MVPA_MATPLOTLIB_BACKEND=agg

--- a/master.cfg
+++ b/master.cfg
@@ -469,7 +469,7 @@ statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
 )
 # pymvpa bot, primarily for sparc testing
 pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
-    test_cmd = shlex.split('MVPA_TESTS_LABILE=no xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe mvpa2'),
+    test_cmd = shlex.split('MVPA_TESTS_LABILE=no MVPA_MATPLOTLIB_BACKEND=agg nosetests --verbosity=3 --exe mvpa2'),
     doc_build_cmd = "make htmldoc",
     built_doc_src = "build/html",
     easy_depends = ('nose',),
