ENH: adding test_env option for GithubBot to pass env variables into test command (and fixing pymvpa accordingly)

--- a/master.cfg
+++ b/master.cfg
@@ -133,11 +133,14 @@ class GithubBot(object):
                  doc_easy_depends=('sphinx',),
                  src_subdir=None,
                  download_dir=None,
-                 build_timeout=None):
+                 build_timeout=None,
+                 test_env=None,
+                 ):
         self.organization = organization
         self.repo = repo
         self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
         self.test_cmd = test_cmd
+        self.test_env = test_env
         self.doc_build_cmd = doc_build_cmd
         self.built_doc_src = built_doc_src
         # Dependencies for install / test
@@ -249,9 +252,12 @@ class GithubBot(object):
                 python=None,
                 easy_depends=None,
                 pip_depends=None,
-                pre_cmds=()):
+                pre_cmds=(),
+                test_env=None):
         if test_cmd is None:
             test_cmd = self.test_cmd
+        if test_env is None:
+            test_env = self.test_env
         factory, env, workdir, build_workdir = self._code_build_factory(
             python, easy_depends, pip_depends, pre_cmds)
         # Additional options for ShellCommands, if provided.  To not
@@ -268,6 +274,8 @@ class GithubBot(object):
             workdir=build_workdir,
             **kwargs))
         # Test
+        if test_env:
+            env = dict(env.items() + test_env.items())
         factory.addStep(ShellCommand(command=test_cmd,
             env=env, workdir=workdir, **kwargs))
         return factory
@@ -469,7 +477,8 @@ statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
 )
 # pymvpa bot, primarily for sparc testing
 pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
-    test_cmd = shlex.split('MVPA_TESTS_LABILE=no MVPA_MATPLOTLIB_BACKEND=agg nosetests --verbosity=3 --exe mvpa2'),
+    test_cmd = shlex.split('nosetests --verbosity=3 --exe mvpa2'),
+    test_env = dict(MVPA_TESTS_LABILE='no', MVPA_MATPLOTLIB_BACKEND='agg'),
     doc_build_cmd = "make htmldoc",
     built_doc_src = "build/html",
     easy_depends = ('nose',),
