ENH: allow for post_cmds for the 'factory' (and build_builders)
Runs in the same environment as tests, so could be used to output
versioning information etc

--- a/master.cfg
+++ b/master.cfg
@@ -253,6 +253,7 @@ class GithubBot(object):
                 easy_depends=None,
                 pip_depends=None,
                 pre_cmds=(),
+                post_cmds=(),
                 test_env=None):
         if test_cmd is None:
             test_cmd = self.test_cmd
@@ -278,6 +279,9 @@ class GithubBot(object):
             env = dict(env.items() + test_env.items())
         factory.addStep(ShellCommand(command=test_cmd,
             env=env, workdir=workdir, **kwargs))
+        for cmd in post_cmds:
+            factory.addStep(ShellCommand(command=shlex.split(cmd, posix=False),
+                                         env=env, workdir=workdir, **kwargs))
         return factory
 
     def bdist_factory(self,
@@ -372,8 +376,12 @@ class GithubBot(object):
                        test_cmd=None,
                        python=None,
                        easy_depends=None,
-                       pip_depends=None):
-        factory = self.factory(test_cmd, python, easy_depends, pip_depends)
+                       pip_depends=None,
+                       pre_cmds=(),
+                       post_cmds=()
+                       ):
+        factory = self.factory(test_cmd, python, easy_depends, pip_depends,
+                               pre_cmds=pre_cmds, post_cmds=post_cmds)
         return self._factory_builders(factory, name_slavenames)
 
     def _factory_builders(self, factory, name_slavenames):
@@ -1035,7 +1043,8 @@ c['builders'] += pandas_bot.build_builders(
 # Statsmodels - can be tested only on recent debian releases
 c['builders'] += statsmodels_bot.build_builders(
     (('statsmodels-py2.x-sid-sparc', sparc_slaves_sid),
-     ('statsmodels-py2.x-wheezy-sparc', sparc_slaves_wheezy)))
+     ('statsmodels-py2.x-wheezy-sparc', sparc_slaves_wheezy)),
+    post_cmds=("python -c 'from statsmodels.tools.print_version import show_versions; show_versions()'",))
 ## and python3 builders
 #c['builders'] += statsmodels_bot.build_builders(
 #    (('statsmodels-py3.x-sid-sparc', sparc_slaves_sid),
