BF?: use posix=True in post_cmds splitting
Otherwise it double quotes the quoted argument and then buildbot
runs a really awkwardly quad-quoted command:
http://nipy.bic.berkeley.edu/builders/statsmodels-py2.x-sid-sparc/builds/6/steps/shell_5/logs/stdio
which doesn't perform correctly

--- a/master.cfg
+++ b/master.cfg
@@ -280,7 +280,7 @@ class GithubBot(object):
         factory.addStep(ShellCommand(command=test_cmd,
             env=env, workdir=workdir, **kwargs))
         for cmd in post_cmds:
-            factory.addStep(ShellCommand(command=shlex.split(cmd, posix=False),
+            factory.addStep(ShellCommand(command=shlex.split(cmd, posix=True),
                                          env=env, workdir=workdir, **kwargs))
         return factory
 
