ENH: do not suppress output in nose runs for pandas/pymvpa/statsmodels + report wtf for pymvpa

--- a/master.cfg
+++ b/master.cfg
@@ -468,7 +468,7 @@ regreg_bot = GithubBot('regreg', 'regreg',
 )
 # pandas bot, primarily for sparc testing
 pandas_bot = GithubBot('pydata', 'pandas',
-    test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe pandas'),
+    test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe -s pandas'),
     doc_build_cmd = "make doc",
     built_doc_src = "doc/build/html",
     easy_depends = ('nose',),
@@ -477,7 +477,7 @@ pandas_bot = GithubBot('pydata', 'pandas',
 )
 # statsmodels bot, primarily for sparc testing
 statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
-    test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe statsmodels'),
+    test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe -s statsmodels'),
     doc_build_cmd = "make -C docs html",
     built_doc_src = "docs/build",
     easy_depends = ('nose',),
@@ -485,8 +485,8 @@ statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
 )
 # pymvpa bot, primarily for sparc testing
 pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
-    test_cmd = shlex.split('nosetests --verbosity=3 --exe mvpa2'),
-    test_env = dict(MVPA_TESTS_LABILE='no', MVPA_MATPLOTLIB_BACKEND='agg'),
+    test_cmd = shlex.split('nosetests --verbosity=3 --exe -s mvpa2'),
+    test_env = dict(MVPA_TESTS_LABILE='no', MVPA_MATPLOTLIB_BACKEND='agg', MVPA_TESTS_WTF='yes'),
     doc_build_cmd = "make htmldoc",
     built_doc_src = "build/html",
     easy_depends = ('nose',),
