ENH: add locking for sparc slaves which are all on a single physical box atm

--- a/master.cfg
+++ b/master.cfg
@@ -60,6 +60,7 @@ from os.path import join as pjoin
 import shlex
 
 # Buildbot objects
+from buildbot.locks import MasterLock
 from buildbot.buildslave import BuildSlave
 from buildbot.changes.gitpoller import GitPoller
 from buildbot.schedulers.filter import ChangeFilter
@@ -86,19 +87,13 @@ reload(s_p)
 if len(set(s_p.slave_passes)) != len(s_p.slave_passes):
     raise ValueError('Slave names must be unique')
 
-# The 'slaves' list defines the set of recognized buildslaves. Each element is
-# a BuildSlave object, specifying a unique slave name and password.  The same
-# slave name and password must be configured on the slave.
-slaves = [BuildSlave(slave_name, slave_pass)
-    for slave_name, slave_pass in s_p.slave_passes.items()]
-
 experimental = ['pi-ApxuMed',]
 
 linux_64_slaves = ['tom-standard']
 linux_32_slaves = ['bongoslave']
 debian_ppc_slaves = ['debian-ppc-32']
-sparc_slaves_sid = 'nd-bb-slave-sparc-sid'
-sparc_slaves_wheezy = 'nd-bb-slave-sparc-wheezy'
+sparc_slaves_sid = ['nd-bb-slave-sparc-sid']
+sparc_slaves_wheezy = ['nd-bb-slave-sparc-wheezy']
 sparc_slaves = ['nd-bb-slave-sparc']
 osx_leopard_ppc_slaves = ['osx-10.5-ppc']
 osx_tiger_ppc_slaves = ['osx-mini']
@@ -108,6 +103,32 @@ osx_mountainlion_slaves = ['osx-10.8']
 xp_32_slaves = ['xp-mini']
 win7_64_slaves = ['mike-win7-64']
 arm_slaves = ['arm-raspberry-pi']
+
+# Locks to prevent resource exhaustion which might need to be defined
+# for some slaves.  It seems that locks need to be given to BuildSlave
+# at __init__ time, so let's construct the mapping first: slave -> [locks]
+# which are later used while initiating BuildSlave's
+def add_lock(slave_locks, slavenames, lock, *accessargs):
+    """Add a LockAccess's to a lock to the list of slaves
+    """
+    for name in slavenames:
+        if not (name in slave_locks):
+            slave_locks[name] = []
+        slave_locks[name].append(lock.access(*accessargs))
+
+slave_locks = {}
+
+# vagus sparc box has only 4 CPUs, thus we should not run more than 4
+# jobs in parallel
+add_lock(slave_locks,
+         sparc_slaves_sid + sparc_slaves_wheezy + sparc_slaves,
+         MasterLock("vagus", maxCount=4), 'counting')
+
+# The 'slaves' list defines the set of recognized buildslaves. Each element is
+# a BuildSlave object, specifying a unique slave name and password.  The same
+# slave name and password must be configured on the slave.
+slaves = [BuildSlave(slave_name, slave_pass, locks=slave_locks.get(slave_name, None))
+    for slave_name, slave_pass in s_p.slave_passes.items()]
 
 # slave names must be unique
 c['slaves'] = slaves
