Poll pandas only once in 5 hours -- it takes too long to build/test, sparc box is overwhelmed, current locking doesn't work

--- a/master.cfg
+++ b/master.cfg
@@ -525,10 +525,17 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                dipy_bot,
                                                nipype_bot,
                                                regreg_bot,
-                                               pandas_bot,
                                                statsmodels_bot,
                                                pymvpa_bot,
                                                )]
+
+# pandas is too expensive to test and overwhelmes the sparc box, so
+# let's pull it much less frequently until figuring out how to
+# implement **correct** locking
+c['change_source'] += [bot.poller(interval=18000)
+                       for bot in (pandas_bot,)]
+
+pandas_bot,
 
 
 ####### SCHEDULERS
