ENH: longer timeout for pymvpa

--- a/master.cfg
+++ b/master.cfg
@@ -511,6 +511,7 @@ pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
     doc_build_cmd = "make htmldoc",
     built_doc_src = "build/html",
     easy_depends = ('nose',),
+    build_timeout = 3600, # allow for its longer testing especially for sparcs.
 )
 ####### CHANGESOURCES
 
