BF: use pip for doc installs by default

--- a/master.cfg
+++ b/master.cfg
@@ -149,14 +149,19 @@ class GithubBot(object):
                  test_cmd,
                  doc_build_cmd=None,
                  built_doc_src=None,
-                 easy_depends=(),
+                 easy_depends=(), # careful with easy_install and system packages
                  pip_depends=(),
-                 doc_easy_depends=('sphinx',),
+                 doc_easy_depends=(), # careful with easy_install and system packages
+                 doc_pip_depends=('sphinx',),
                  src_subdir=None,
                  download_dir=None,
                  build_timeout=None,
                  test_env=None,
                  ):
+        # using easy_install on packages that are already in
+        # system-site-packages causes the system path to get promoted above the
+        # virtualenv path, and usually causes a terrible mess.  so prefer pip
+        # if at all possible.
         self.organization = organization
         self.repo = repo
         self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
@@ -168,6 +173,7 @@ class GithubBot(object):
         self.easy_depends = easy_depends # easy_install installs
         self.pip_depends = pip_depends # pip
         self.doc_easy_depends = doc_easy_depends # easy_installs for docs
+        self.doc_pip_depends = doc_pip_depends # pip installs for docs
         self.src_subdir = src_subdir # Subdirectory containing source
         if download_dir is None:
             download_dir = '%s-dist' % repo
@@ -386,6 +392,9 @@ class GithubBot(object):
         for pkg_spec in self.doc_easy_depends:
             factory.addStep(ShellCommand(command=[
                         'easy_install', pkg_spec], env=env))
+        for pkg_spec in self.doc_pip_depends:
+            factory.addStep(ShellCommand(command=[
+                        'pip', 'install', pkg_spec], env=env))
         if not doc_doctest_cmd is None:
             factory.addStep(ShellCommand(command=doc_doctest_cmd, env=env))
         factory.addStep(ShellCommand(command=doc_build_cmd, env=env))
