RF: use pip to install most things
--ignore-installed to force reinstall of programs / shebang lines.

--- a/master.cfg
+++ b/master.cfg
@@ -226,6 +226,23 @@ class GithubBot(object):
                 minute=minute,
                 onlyIfChanged=ifchanged)
 
+    def _easy_install(self, factory, easy_depends, env):
+        for pkg_spec in easy_depends:
+            factory.addStep(ShellCommand(command=[
+                        'easy_install', pkg_spec], env=env))
+
+    def _pip_install(self, factory, pip_depends, env):
+        for pkg_spec in pip_depends:
+            # We need the 'ignore-installed' flag to force pip to install the
+            # programs in the virtualenv.  Otherwise pip finds the programs
+            # (like 'nose') already installed; these then call the system
+            # python and we don't get the virtualenv
+            factory.addStep(ShellCommand(command=[
+                        'pip', 'install',
+                        '--ignore-installed',  # fresh install
+                        pkg_spec],
+                        env=env))
+
     def _code_build_factory(self,
                             python=None,
                             easy_depends=None,
@@ -258,12 +275,8 @@ class GithubBot(object):
         my_env={'PATH': WithProperties("%(venv_script_dir)s${PATH}")}
         workdir = WithProperties("%(venv_dir)s")
         # Add install and runtime dependencies
-        for pkg_spec in easy_depends:
-            factory.addStep(ShellCommand(command=[
-                        'easy_install', pkg_spec], env=my_env))
-        for pkg_spec in pip_depends:
-            factory.addStep(ShellCommand(command=[
-                        'pip', 'install', pkg_spec], env=my_env))
+        self._easy_install(factory, easy_depends, my_env)
+        self._pip_install(factory, pip_depends, my_env)
         # Work out working directory for install
         if not self.src_subdir is None:
             factory.addStep(SetProperty(command=[
@@ -379,25 +392,22 @@ class GithubBot(object):
             built_doc_src = self.built_doc_src
         if None in (doc_build_cmd, built_doc_src):
             raise ValueError("Need defined build command and doc source")
-        factory, env, workdir, build_workdir = self._code_build_factory()
+        factory, my_env, workdir, build_workdir = self._code_build_factory()
         # Install into virtualenv
         kwargs = {}
         if self.build_timeout:
             kwargs['timeout'] = self.build_timeout
         factory.addStep(ShellCommand(
             command=['python', 'setup.py', 'install'],
-            env=env,
+            env=my_env,
             workdir=build_workdir,
             **kwargs))
-        for pkg_spec in self.doc_easy_depends:
-            factory.addStep(ShellCommand(command=[
-                        'easy_install', pkg_spec], env=env))
-        for pkg_spec in self.doc_pip_depends:
-            factory.addStep(ShellCommand(command=[
-                        'pip', 'install', pkg_spec], env=env))
+        # Add install and runtime dependencies
+        self._easy_install(factory, self.doc_easy_depends, my_env)
+        self._pip_install(factory, self.doc_pip_depends, my_env)
         if not doc_doctest_cmd is None:
-            factory.addStep(ShellCommand(command=doc_doctest_cmd, env=env))
-        factory.addStep(ShellCommand(command=doc_build_cmd, env=env))
+            factory.addStep(ShellCommand(command=doc_doctest_cmd, env=my_env))
+        factory.addStep(ShellCommand(command=doc_build_cmd, env=my_env))
         factory.addStep(DirectoryUpload(slavesrc=built_doc_src,
                     masterdest="public_html/nightly/" + self.repo + '/doc'))
         return factory
@@ -459,41 +469,40 @@ nibabel_bot = GithubBot('nipy', 'nibabel',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest nibabel'),
     doc_build_cmd = "cd doc && make html",
     built_doc_src = "build/html",
-    easy_depends = ('nose',)
+    pip_depends = ('nose',)
 )
 nitime_bot = GithubBot('nipy', 'nitime',
     test_cmd = nptest_command('nitime', verbose=None),
-    easy_depends = ('nose',)
+    pip_depends = ('nose',)
 )
 nitime_arokem_bot = GithubBot('arokem','nitime',
     test_cmd = nptest_command('nitime', verbose=None),
-    easy_depends = ('nose',)
+    pip_depends = ('nose',)
 )
 nipy_bot = GithubBot('nipy', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist",
-    easy_depends = ('nose',),
-    pip_depends = ('sympy', 'nibabel')
+    pip_depends = ('nose', 'sympy', 'nibabel')
 )
 dipy_bot = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest dipy'),
-    easy_depends = ('nose',),
-    pip_depends = ('cython>=0.17', 'nibabel')
+    pip_depends = ('nose', 'cython>=0.17', 'nibabel')
 )
-# dipy bot for linux machines with optional easy_depends that need an X window
-# for testing
+# dipy bot for linux machines with optional easy_depends and pip_depends that
+# need an X window for testing
 dipy_bot_nox = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
     easy_depends = ('nose', 'nibabel')
 )
 nipype_bot = GithubBot('nipy', 'nipype',
     test_cmd = nptest_command('nipype', doctests=True),
-    easy_depends = ('nose', 'nibabel', 'networkx', 'Traits')
+    easy_depends = ('Traits',),
+    pip_depends = ('nose', 'nibabel', 'networkx')
 )
 regreg_bot = GithubBot('regreg', 'regreg',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest regreg'),
-    easy_depends = ('nose',),
+    pip_depends = ('nose',),
     src_subdir = 'code'
 )
 # pandas bot, primarily for sparc testing
@@ -501,8 +510,7 @@ pandas_bot = GithubBot('pydata', 'pandas',
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe -s pandas'),
     doc_build_cmd = "make doc",
     built_doc_src = "doc/build/html",
-    easy_depends = ('nose',),
-    pip_depends = ('apiclient',),
+    pip_depends = ('nose', 'apiclient',),
     build_timeout = 7200, # allow for its longer builds/testing especially for sparcs
 )
 # statsmodels bot, primarily for sparc testing
@@ -510,8 +518,7 @@ statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe -s statsmodels'),
     doc_build_cmd = "make -C docs html",
     built_doc_src = "docs/build",
-    easy_depends = ('nose',),
-    pip_depends = ('patsy>=0.1.0',),
+    pip_depends = ('nose', 'patsy>=0.1.0',),
 )
 # pymvpa bot, primarily for sparc testing
 pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
@@ -519,7 +526,7 @@ pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
     test_env = dict(MVPA_TESTS_LABILE='no', MVPA_MATPLOTLIB_BACKEND='agg', MVPA_TESTS_WTF='yes'),
     doc_build_cmd = "make htmldoc",
     built_doc_src = "build/html",
-    easy_depends = ('nose',),
+    pip_depends = ('nose',),
     build_timeout = 3600, # allow for its longer testing especially for sparcs.
 )
 ####### CHANGESOURCES
@@ -974,11 +981,11 @@ c['builders'] += nibabel_bot.build_builders(
 c['builders'] += nibabel_bot.build_builders(
     (('nibabel-py2.7-pyd0.9.7', osx_mountainlion_slaves),),
     python='python2.7',
-    easy_depends = ('nose', 'pydicom==0.9.7'))
+    pip_depends = ('nose', 'pydicom==0.9.7'))
 c['builders'] += nibabel_bot.build_builders(
     (('nibabel-py2.7-pyd0.9.8', osx_mountainlion_slaves),),
     python='python2.7',
-    easy_depends = ('nose', 'pydicom==0.9.8'))
+    pip_depends = ('nose', 'pydicom==0.9.8'))
 # Nitime
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
